--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 3002 -H 0.0.0.0",
     "dev:lan": "IP=$(ipconfig getifaddr en0 || ipconfig getifaddr en1); echo \"Network URL: http://$IP:3002\"; next dev -p 3002 -H 0.0.0.0",
     "build": "next build",
+    "generate:profiles": "node scripts/generate-profile-manifest.mjs",
     "start": "next start -p 3002 -H 0.0.0.0",
     "start:lan": "IP=$(ipconfig getifaddr en0 || ipconfig getifaddr en1); echo \"Network URL: http://$IP:3002\"; next start -p 3002 -H 0.0.0.0",
     "lint": "next lint"
@@ -22,6 +23,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^10.16.4",
+    "image-size": "^1.1.0",
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
